Added unittests for add customer